# immich-uploader-deck

./: .gitignore  ARCHITECTURE.md  BUILD_WINDOWS.md  LICENSE  README.md  main.py  package.json  plugin.json  pnpm-lock.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  database.rs  main.rs
backend/src/uploaders/: immich.rs  mod.rs
defaults/: immichuploader.yml
src/: index.tsx
steamdeck-package/immichuploader/: README.md  package.json
