[package]
name = "immichuploader"
version = "0.1.0"
authors = ["R. Schlensog + AI Support / KI Unterstützung"]
description = "Automatic screenshot uploader for the Steam Deck (Immich Only)"
license = "MIT"

edition = "2021"

[profile.release]
strip = "debuginfo"
opt-level = "s"
lto = "thin"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.60"
base64 = "0.21.0"
clap = "4.0.32"
futures = "0.3.25"
kvlogger = "0.5.0"
log = "*"
notify = "5.0.0"
pickledb = { version = "0.5.1", default-features = false, features = ["bincode"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "multipart", "stream", "json"] }
serde = "^1.0"
serde_json = "^1.0"
serde_yaml = "0.9.16"
tokio = { version = "^1.23", features = ["macros", "rt-multi-thread", "sync", "io-util", "fs", "time"] }
rand = "0.8.5"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
